--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -2,4 +2,7 @@ deploy.ant.properties.file=/Users/zhouyunlu/Library/Application Support/NetBeans
 j2ee.server.domain=/Users/zhouyunlu/Library/Tomcat8/conf/Catalina/localhost
 j2ee.server.home=/Users/zhouyunlu/Library/Tomcat8
 j2ee.server.instance=tomcat80:home=/Users/zhouyunlu/Library/Tomcat8:base=/Users/zhouyunlu/Library/Tomcat8/conf/Catalina/localhost
+javac.debug=true
+javadoc.preview=true
+selected.browser=default
 user.properties.file=/Users/zhouyunlu/Library/Application Support/NetBeans/8.1/build.properties
