--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -5,5 +5,5 @@ j2ee.server.home=C:/apache-tomcat-8.5.8-windows-x64/apache-tomcat-8.5.8
 j2ee.server.instance=tomcat80:home=C:\\apache-tomcat-8.5.8-windows-x64\\apache-tomcat-8.5.8
 javac.debug=true
 javadoc.preview=true
-selected.browser=default
+selected.browser=Chrome.INTEGRATED
 user.properties.file=C:\\Users\\FangningHe\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
