--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -28,11 +28,6 @@ dist.war=${dist.dir}/${war.name}
 endorsed.classpath=\
     ${libs.javaee-endorsed-api-7.0.classpath}
 excludes=
-file.reference.commons-dbutils-1.6-javadoc.jar=/Users/jingli/Desktop/WEBTOOLS/commons-dbutils-1.6/commons-dbutils-1.6-javadoc.jar
-file.reference.commons-dbutils-1.6-sources.jar=/Users/jingli/Desktop/WEBTOOLS/commons-dbutils-1.6/commons-dbutils-1.6-sources.jar
-file.reference.commons-dbutils-1.6-test-sources.jar=/Users/jingli/Desktop/WEBTOOLS/commons-dbutils-1.6/commons-dbutils-1.6-test-sources.jar
-file.reference.commons-dbutils-1.6-tests.jar=/Users/jingli/Desktop/WEBTOOLS/commons-dbutils-1.6/commons-dbutils-1.6-tests.jar
-file.reference.commons-dbutils-1.6.jar=/Users/jingli/Desktop/WEBTOOLS/commons-dbutils-1.6/commons-dbutils-1.6.jar
 file.reference.commons-dbutils-1.6.jar-1=../Downloads/commons-dbutils-1.6/commons-dbutils-1.6.jar
 includes=**
 j2ee.compile.on.save=true
@@ -46,12 +41,7 @@ javac.classpath=\
     ${libs.spring-framework400.classpath}:\
     ${libs.jstl.classpath}:\
     ${libs.MySQLDriver.classpath}:\
-    ${file.reference.commons-dbutils-1.6.jar-1}:\
-    ${file.reference.commons-dbutils-1.6-javadoc.jar}:\
-    ${file.reference.commons-dbutils-1.6-sources.jar}:\
-    ${file.reference.commons-dbutils-1.6-test-sources.jar}:\
-    ${file.reference.commons-dbutils-1.6-tests.jar}:\
-    ${file.reference.commons-dbutils-1.6.jar}
+    ${file.reference.commons-dbutils-1.6.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
