--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -28,7 +28,11 @@ dist.war=${dist.dir}/${war.name}
 endorsed.classpath=\
     ${libs.javaee-endorsed-api-7.0.classpath}
 excludes=
-file.reference.commons-dbutils-1.6.jar-1=../Downloads/commons-dbutils-1.6/commons-dbutils-1.6.jar
+file.reference.commons-dbutils-1.6-javadoc.jar=/Users/jingli/Desktop/WEBTOOLS/commons-dbutils-1.6/commons-dbutils-1.6-javadoc.jar
+file.reference.commons-dbutils-1.6-sources.jar=/Users/jingli/Desktop/WEBTOOLS/commons-dbutils-1.6/commons-dbutils-1.6-sources.jar
+file.reference.commons-dbutils-1.6-test-sources.jar=/Users/jingli/Desktop/WEBTOOLS/commons-dbutils-1.6/commons-dbutils-1.6-test-sources.jar
+file.reference.commons-dbutils-1.6-tests.jar=/Users/jingli/Desktop/WEBTOOLS/commons-dbutils-1.6/commons-dbutils-1.6-tests.jar
+file.reference.commons-dbutils-1.6.jar-2=/Users/jingli/Desktop/WEBTOOLS/commons-dbutils-1.6/commons-dbutils-1.6.jar
 includes=**
 j2ee.compile.on.save=true
 j2ee.copy.static.files.on.save=true
@@ -41,7 +45,11 @@ javac.classpath=\
     ${libs.jstl.classpath}:\
     ${libs.MySQLDriver.classpath}:\
     ${libs.spring-framework400.classpath}:\
-    ${file.reference.commons-dbutils-1.6.jar-1}
+    ${file.reference.commons-dbutils-1.6-javadoc.jar}:\
+    ${file.reference.commons-dbutils-1.6-sources.jar}:\
+    ${file.reference.commons-dbutils-1.6-test-sources.jar}:\
+    ${file.reference.commons-dbutils-1.6-tests.jar}:\
+    ${file.reference.commons-dbutils-1.6.jar-2}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
